syntax = "proto3";

package zksync.config.object_store;

message ObjectStore {
  message Gcs {
    optional string bucket_base_url = 1; // required; url
  }

  message GcsWithCredentialFile {
    optional string bucket_base_url = 1; // required; url
    optional string gcs_credential_file_path = 4; // required; fs path
  }

  message GcsAnonymousReadOnly {
    optional string bucket_base_url = 1; // required; url
  }

  message S3WithCredentialFile {
    optional string bucket_base_url = 1; // required; url
    optional string s3_credential_file_path = 2; // required; fs path
    optional string endpoint = 3;
    optional string region = 4;
  }

  message S3AnonymousReadOnly {
    optional string bucket_base_url = 1; // required; url
    optional string endpoint = 2;
    optional string region = 3;
  }

  message FileBacked {
    optional string file_backed_base_path = 3; // required; fs path
  }

  oneof mode {
    Gcs gcs = 1;
    GcsWithCredentialFile gcs_with_credential_file = 2;
    GcsAnonymousReadOnly gcs_anonymous_read_only = 3;
    S3WithCredentialFile s3_with_credential_file = 7;
    S3AnonymousReadOnly s3_anonymous_read_only = 8;
    FileBacked file_backed = 4;
  }
  optional uint32 max_retries = 5; // required
  optional string local_mirror_path = 6; // optional; fs path
}
